- Fixed bug #50146 (property_exists: Closure object cannot have properties)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@290516 c90b9560-bf6c-de11-be94-00142212c4b1